Topic 23 Log4j Report Inprogress

--- a/test-output/old/Suite/reporter-output.html
+++ b/test-output/old/Suite/reporter-output.html
@@ -1,1 +1,29 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td>[INFO ] [2022-05-20 00:58:12,325] Pre-condition: Open chrome and Navigate to app url
+<br></td></tr>
+<tr><td>[INFO ] [2022-05-20 00:58:20,308] Register - Step 01: Get login page url
+<br></td></tr>
+<tr><td>[INFO ] [2022-05-20 00:58:20,319] Register - Step 02: Click to 'here' link
+<br></td></tr>
+<tr><td>[INFO ] [2022-05-20 00:58:21,906] Register - Step 03: Input to 'Email' textbox with value: klinhtkt@gmail.com
+<br></td></tr>
+<tr><td>[INFO ] [2022-05-20 00:58:22,068] Register - Step 04: Click to 'Submit' button
+<br></td></tr>
+<tr><td>[INFO ] [2022-05-20 00:58:24,137] Register - Step 05: Get 'Username' / 'Password' information
+<br></td></tr>
+<tr><td>[INFO ] [2022-05-20 00:58:24,267] Login - Step 01: Open Login page
+<br></td></tr>
+<tr><td>[INFO ] [2022-05-20 00:58:25,209] Login - Step 02: Check login form displayed
+<br></td></tr>
+<tr><td>[INFO ] [2022-05-20 00:58:30,312] Login - Step 03: Input to 'Username' textbox with value: mngr399874
+<br></td></tr>
+<tr><td>[INFO ] [2022-05-20 00:58:30,473] Login - Step 04: Input to 'Password' textbox with value: uteguga
+<br></td></tr>
+<tr><td>[INFO ] [2022-05-20 00:58:30,589] Login - Step 05: Click to 'Login' button
+<br></td></tr>
+<tr><td>[INFO ] [2022-05-20 00:58:31,712] Login - Step 06: Verify welcom message display in 'Homepage'
+<br></td></tr>
+<tr><td>[INFO ] [2022-05-20 00:58:31,854] Login - Step 07: Check login form undisplayed
+<br></td></tr>
+<tr><td>[INFO ] [2022-05-20 00:58:42,008] Postcondition - Close browser
+<br></td></tr>
+</table>
