--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,30 +8,45 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Suite</th></tr>
-<tr><td><a href="#t0">Run on Chrome</a></td><td class="num">1</td><td class="num">0</td><td class="num attn">1</td><td class="num">28,747</td><td></td><td></td></tr>
+<tr><th colspan="7">Bank Guru</th></tr>
+<tr><td><a href="#t0">Run on Chrome</a></td><td class="num">1</td><td class="num">0</td><td class="num attn">1</td><td class="num">13,895</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">Run on Firefox</a></td><td class="num">1</td><td class="num">0</td><td class="num attn">1</td><td class="num">31,343</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">2</th><th class="num">0</th><th class="num attn">2</th><th class="num">45,238</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Run on Chrome &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.bankguru.user.Level_14_Assert_Verify</td><td><a href="#m0">TC_02_Login_To_System</a></td><td rowspan="1">1652604555754</td><td rowspan="1">17466</td></tr><tr><th colspan="4">Run on Chrome &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.bankguru.user.Level_14_Assert_Verify</td><td><a href="#m1">TC_01_Register_To_System</a></td><td rowspan="1">1652604555745</td><td rowspan="1">5</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Bank Guru</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Run on Chrome &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.bankguru.user.Level_15_Log_Report_HTML</td><td><a href="#m0">TC_02_Login_To_System</a></td><td rowspan="1">1652988199678</td><td rowspan="1">2232</td></tr><tr><th colspan="4">Run on Chrome &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.bankguru.user.Level_15_Log_Report_HTML</td><td><a href="#m1">TC_01_Register_To_System</a></td><td rowspan="1">1652988195593</td><td rowspan="1">4083</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">Run on Firefox &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.bankguru.user.Level_15_Log_Report_HTML</td><td><a href="#m2">TC_02_Login_To_System</a></td><td rowspan="1">1652988230430</td><td rowspan="1">2443</td></tr><tr><th colspan="4">Run on Firefox &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.bankguru.user.Level_15_Log_Report_HTML</td><td><a href="#m3">TC_01_Register_To_System</a></td><td rowspan="1">1652988226302</td><td rowspan="1">4127</td></tr></tbody>
 </table>
-<h2>Run on Chrome</h2><h3 id="m0">com.bankguru.user.Level_14_Assert_Verify#TC_02_Login_To_System</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.Throwable: Multiple failures (3):
-Failure 1 of 3
-java.lang.AssertionError: expected [true] but found [false]
-	at commons.AbstractTest.checkTrue(AbstractTest.java:129)
-	at commons.AbstractTest.verifyTrue(AbstractTest.java:141)
-	at com.bankguru.user.Level_14_Assert_Verify.TC_02_Login_To_System(Level_14_Assert_Verify.java:58)
-
-Failure 2 of 3
-java.lang.AssertionError: expected [Welcome To Manager&apos;s Page of. ] but found [Welcome To Manager&apos;s Page of Guru99 Bank]
-	at commons.AbstractTest.checkEquals(AbstractTest.java:164)
-	at commons.AbstractTest.verifyEquals(AbstractTest.java:176)
-	at com.bankguru.user.Level_14_Assert_Verify.TC_02_Login_To_System(Level_14_Assert_Verify.java:69)
-
-Failure 3 of 3
-java.lang.AssertionError: expected [false] but found [true]
-	at commons.AbstractTest.checkFailed(AbstractTest.java:148)
-	at commons.AbstractTest.verifyFalse(AbstractTest.java:158)
-	at com.bankguru.user.Level_14_Assert_Verify.TC_02_Login_To_System(Level_14_Assert_Verify.java:74)
-... Removed 88 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.bankguru.user.Level_14_Assert_Verify#TC_01_Register_To_System</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Run on Chrome</h2><h3 id="m0">com.bankguru.user.Level_15_Log_Report_HTML#TC_02_Login_To_System</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">[INFO ] [2022-05-20 02:23:19,679] Login - Step 01: Open Login page
+<br><br/>[INFO ] [2022-05-20 02:23:20,567] Login - Step 03: Input to 'Username' textbox with value: mngr399874
+<br><br/>[INFO ] [2022-05-20 02:23:20,694] Login - Step 04: Input to 'Password' textbox with value: uteguga
+<br><br/>[INFO ] [2022-05-20 02:23:20,811] Login - Step 05: Click to 'Login' button
+<br><br/>[INFO ] [2022-05-20 02:23:21,858] Login - Step 06: Verify welcom message display in 'Homepage'
+<br></div></td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [Welcome To Manager&apos;s Page of Guru99 Bankdfasd ., ] but found [Welcome To Manager&apos;s Page of Guru99 Bank]
+	at commons.AbstractTest.checkEquals(AbstractTest.java:174)
+	at commons.AbstractTest.verifyEquals(AbstractTest.java:185)
+	at com.bankguru.user.Level_15_Log_Report_HTML.TC_02_Login_To_System(Level_15_Log_Report_HTML.java:65)
+... Removed 30 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.bankguru.user.Level_15_Log_Report_HTML#TC_01_Register_To_System</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">[INFO ] [2022-05-20 02:23:15,597] Register - Step 01: Get login page url
+<br><br/>[INFO ] [2022-05-20 02:23:15,603] Register - Step 02: Click to 'here' link
+<br><br/>[INFO ] [2022-05-20 02:23:17,241] Register - Step 03: Input to 'Email' textbox with value: klinhtkt@gmail.com
+<br><br/>[INFO ] [2022-05-20 02:23:17,401] Register - Step 04: Click to 'Submit' button
+<br><br/>[INFO ] [2022-05-20 02:23:19,576] Register - Step 05: Get 'Username' / 'Password' information
+<br></div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Run on Firefox</h2><h3 id="m2">com.bankguru.user.Level_15_Log_Report_HTML#TC_02_Login_To_System</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">[INFO ] [2022-05-20 02:23:50,431] Login - Step 01: Open Login page
+<br><br/>[INFO ] [2022-05-20 02:23:51,537] Login - Step 03: Input to 'Username' textbox with value: mngr399874
+<br><br/>[INFO ] [2022-05-20 02:23:51,603] Login - Step 04: Input to 'Password' textbox with value: uteguga
+<br><br/>[INFO ] [2022-05-20 02:23:51,648] Login - Step 05: Click to 'Login' button
+<br><br/>[INFO ] [2022-05-20 02:23:52,836] Login - Step 06: Verify welcom message display in 'Homepage'
+<br></div></td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [Welcome To Manager&apos;s Page of Guru99 Bankdfasd ., ] but found [Welcome To Manager&apos;s Page of Guru99 Bank]
+	at commons.AbstractTest.checkEquals(AbstractTest.java:174)
+	at commons.AbstractTest.verifyEquals(AbstractTest.java:185)
+	at com.bankguru.user.Level_15_Log_Report_HTML.TC_02_Login_To_System(Level_15_Log_Report_HTML.java:65)
+... Removed 30 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.bankguru.user.Level_15_Log_Report_HTML#TC_01_Register_To_System</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">[INFO ] [2022-05-20 02:23:46,304] Register - Step 01: Get login page url
+<br><br/>[INFO ] [2022-05-20 02:23:46,310] Register - Step 02: Click to 'here' link
+<br><br/>[INFO ] [2022-05-20 02:23:48,123] Register - Step 03: Input to 'Email' textbox with value: klinhtkt@gmail.com
+<br><br/>[INFO ] [2022-05-20 02:23:48,232] Register - Step 04: Click to 'Submit' button
+<br><br/>[INFO ] [2022-05-20 02:23:50,363] Register - Step 05: Get 'Username' / 'Password' information
+<br></div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
