--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f2bdbb">  <td>22/05/15 15:49:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_14_Assert_Verify.TC_01_Register_To_System()[pri:0, instance:com.bankguru.user.Level_14_Assert_Verify@c0c2f8d]">TC_01_Register_To_System</td> 
-  <td>main@298430307</td>   <td></td> </tr>
-<tr bgcolor="f2bdbb">  <td>22/05/15 15:49:15</td>   <td>9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_14_Assert_Verify.TC_02_Login_To_System()[pri:0, instance:com.bankguru.user.Level_14_Assert_Verify@c0c2f8d]">TC_02_Login_To_System</td> 
-  <td>main@298430307</td>   <td></td> </tr>
-<tr bgcolor="f2bdbb">  <td>22/05/15 15:49:33</td>   <td>17492</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_14_Assert_Verify.afterClass()[pri:0, instance:com.bankguru.user.Level_14_Assert_Verify@c0c2f8d]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@298430307</td>   <td></td> </tr>
-<tr bgcolor="f2bdbb">  <td>22/05/15 15:49:04</td>   <td>-10949</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_14_Assert_Verify.beforeClass(java.lang.String)[pri:0, instance:com.bankguru.user.Level_14_Assert_Verify@c0c2f8d]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@298430307</td>   <td></td> </tr>
+<tr bgcolor="eaca72">  <td>22/05/20 00:58:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_15_Log_Report_HTML.TC_01_Register_To_System()[pri:0, instance:com.bankguru.user.Level_15_Log_Report_HTML@4b8ee4de]">TC_01_Register_To_System</td> 
+  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="eaca72">  <td>22/05/20 00:58:24</td>   <td>3966</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_15_Log_Report_HTML.TC_02_Login_To_System()[pri:0, instance:com.bankguru.user.Level_15_Log_Report_HTML@4b8ee4de]">TC_02_Login_To_System</td> 
+  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="eaca72">  <td>22/05/20 00:58:42</td>   <td>21708</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_15_Log_Report_HTML.afterClass()[pri:0, instance:com.bankguru.user.Level_15_Log_Report_HTML@4b8ee4de]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="eaca72">  <td>22/05/20 00:58:12</td>   <td>-7979</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_15_Log_Report_HTML.beforeClass(java.lang.String)[pri:0, instance:com.bankguru.user.Level_15_Log_Report_HTML@4b8ee4de]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@754177595</td>   <td></td> </tr>
 </table>
