--- a/test-output/index.html
+++ b/test-output/index.html
@@ -24,7 +24,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite, 2 failed tests</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -54,7 +54,7 @@
                 </li>
                 <li>
                   <a href="#" panel-name="testlist-Bank_Guru" class="navigator-link ">
-                    <span class="test-stats">2 tests</span>
+                    <span class="test-stats">1 test</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods, 2 failed,   2 passed</span>
+                    <span class="method-stats">2 methods, 1 failed,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title failed">Failed methods</span>
@@ -100,11 +100,6 @@
                       <a href="#" panel-name="suite-Bank_Guru" class="show-methods failed suite-Bank_Guru"> (show)</a> <!-- show-methods failed suite-Bank_Guru -->
                     </span>
                     <div class="method-list-content failed suite-Bank_Guru">
-                      <span>
-                        <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Bank_Guru" title="com.bankguru.user.Level_15_Log_Report_HTML" class="method navigator-link" hash-for-method="TC_02_Login_To_System">TC_02_Login_To_System</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
                       <span>
                         <img src="failed.png" width="3%"/>
                         <a href="#" panel-name="suite-Bank_Guru" title="com.bankguru.user.Level_15_Log_Report_HTML" class="method navigator-link" hash-for-method="TC_02_Login_To_System">TC_02_Login_To_System</a> <!-- method navigator-link -->
@@ -119,11 +114,6 @@
                       <a href="#" panel-name="suite-Bank_Guru" class="show-methods passed suite-Bank_Guru"> (show)</a> <!-- show-methods passed suite-Bank_Guru -->
                     </span>
                     <div class="method-list-content passed suite-Bank_Guru">
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Bank_Guru" title="com.bankguru.user.Level_15_Log_Report_HTML" class="method navigator-link" hash-for-method="TC_01_Register_To_System">TC_01_Register_To_System</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Bank_Guru" title="com.bankguru.user.Level_15_Log_Report_HTML" class="method navigator-link" hash-for-method="TC_01_Register_To_System">TC_01_Register_To_System</a> <!-- method navigator-link -->
@@ -160,19 +150,6 @@
 </div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="TC_02_Login_To_System">
-                  </a> <!-- TC_02_Login_To_System -->
-                  <span class="method-name">TC_02_Login_To_System</span>
-                  <div class="stack-trace">java.lang.AssertionError: expected [Welcome To Manager&apos;s Page of Guru99 Bankdfasd ., ] but found [Welcome To Manager&apos;s Page of Guru99 Bank]
-	at commons.AbstractTest.checkEquals(AbstractTest.java:174)
-	at commons.AbstractTest.verifyEquals(AbstractTest.java:185)
-	at com.bankguru.user.Level_15_Log_Report_HTML.TC_02_Login_To_System(Level_15_Log_Report_HTML.java:65)
-... Removed 30 stack frames
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Bank_Guru-class-failed -->
           <div class="suite-Bank_Guru-class-passed">
@@ -181,13 +158,6 @@
               <span class="class-name">com.bankguru.user.Level_15_Log_Report_HTML</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="TC_01_Register_To_System">
-                  </a> <!-- TC_01_Register_To_System -->
-                  <span class="method-name">TC_01_Register_To_System</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="TC_01_Register_To_System">
@@ -210,7 +180,7 @@
   &lt;listeners&gt;
     &lt;listener class-name=&quot;commons.MethodListener&quot;/&gt;
     &lt;listener class-name=&quot;org.uncommons.reportng.HTMLReporter&quot;/&gt;
-    &lt;listener class-name=&quot;reportConfig.ExtentReportListenerV2&quot;/&gt;
+    &lt;listener class-name=&quot;reportConfig.ExtentListener&quot;/&gt;
   &lt;/listeners&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Run on Chrome&quot;&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
@@ -218,12 +188,6 @@
       &lt;class name=&quot;com.bankguru.user.Level_15_Log_Report_HTML&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Run on Chrome --&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;Run on Firefox&quot;&gt;
-    &lt;parameter name=&quot;browser&quot; value=&quot;firefox&quot;/&gt;
-    &lt;classes&gt;
-      &lt;class name=&quot;com.bankguru.user.Level_15_Log_Report_HTML&quot;/&gt;
-    &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Run on Firefox --&gt;
 &lt;/suite&gt; &lt;!-- Bank Guru --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -236,9 +200,6 @@
             <ul>
               <li>
                 <span class="test-name">Run on Chrome (1 class)</span>
-              </li>
-              <li>
-                <span class="test-name">Run on Firefox (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -264,28 +225,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'TC_01_Register_To_System')
 data.setCell(0, 2, 'com.bankguru.user.Level_15_Log_Report_HTML')
-data.setCell(0, 3, 4127);
+data.setCell(0, 3, 21224);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'TC_01_Register_To_System')
+data.setCell(1, 1, 'TC_02_Login_To_System')
 data.setCell(1, 2, 'com.bankguru.user.Level_15_Log_Report_HTML')
-data.setCell(1, 3, 4083);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'TC_02_Login_To_System')
-data.setCell(2, 2, 'com.bankguru.user.Level_15_Log_Report_HTML')
-data.setCell(2, 3, 2443);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'TC_02_Login_To_System')
-data.setCell(3, 2, 'com.bankguru.user.Level_15_Log_Report_HTML')
-data.setCell(3, 3, 2232);
+data.setCell(1, 3, 6988);
 window.suiteTableData['Bank_Guru']= { tableData: data, tableDiv: 'times-div-Bank_Guru'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 12 seconds</span>
+              <span class="suite-total-time">Total running time: 28 seconds</span>
               <div id="times-div-Bank_Guru">
               </div> <!-- times-div-Bank_Guru -->
             </div> <!-- times-div -->
@@ -299,60 +252,30 @@ return data;
             <div class="reporter-method-div">
               <span class="reporter-method-name">TC_01_Register_To_System</span>
               <div class="reporter-method-output-div">
-                <span class="reporter-method-output">[INFO ] [2022-05-20 02:23:15,597] Register - Step 01: Get login page url
+                <span class="reporter-method-output">[INFO ] [2022-05-21 16:50:57,260] Register - Step 01: Get login page url
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-05-20 02:23:15,603] Register - Step 02: Click to 'here' link
+                <span class="reporter-method-output">[INFO ] [2022-05-21 16:50:57,266] Register - Step 02: Click to 'here' link
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-05-20 02:23:17,241] Register - Step 03: Input to 'Email' textbox with value: klinhtkt@gmail.com
+                <span class="reporter-method-output">[INFO ] [2022-05-21 16:51:11,270] Register - Step 03: Input to 'Email' textbox with value: klinhtkt@gmail.com
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-05-20 02:23:17,401] Register - Step 04: Click to 'Submit' button
+                <span class="reporter-method-output">[INFO ] [2022-05-21 16:51:11,459] Register - Step 04: Click to 'Submit' button
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-05-20 02:23:19,576] Register - Step 05: Get 'Username' / 'Password' information
-<br></span>
-              </div> <!-- reporter-method-output-div -->
-            </div> <!-- reporter-method-div -->
-            <div class="reporter-method-div">
-              <span class="reporter-method-name">TC_02_Login_To_System</span>
-              <div class="reporter-method-output-div">
-                <span class="reporter-method-output">[INFO ] [2022-05-20 02:23:19,679] Login - Step 01: Open Login page
-<br></span>
-                <span class="reporter-method-output">[INFO ] [2022-05-20 02:23:20,567] Login - Step 03: Input to 'Username' textbox with value: mngr399874
-<br></span>
-                <span class="reporter-method-output">[INFO ] [2022-05-20 02:23:20,694] Login - Step 04: Input to 'Password' textbox with value: uteguga
-<br></span>
-                <span class="reporter-method-output">[INFO ] [2022-05-20 02:23:20,811] Login - Step 05: Click to 'Login' button
-<br></span>
-                <span class="reporter-method-output">[INFO ] [2022-05-20 02:23:21,858] Login - Step 06: Verify welcom message display in 'Homepage'
-<br></span>
-              </div> <!-- reporter-method-output-div -->
-            </div> <!-- reporter-method-div -->
-            <div class="reporter-method-div">
-              <span class="reporter-method-name">TC_01_Register_To_System</span>
-              <div class="reporter-method-output-div">
-                <span class="reporter-method-output">[INFO ] [2022-05-20 02:23:46,304] Register - Step 01: Get login page url
-<br></span>
-                <span class="reporter-method-output">[INFO ] [2022-05-20 02:23:46,310] Register - Step 02: Click to 'here' link
-<br></span>
-                <span class="reporter-method-output">[INFO ] [2022-05-20 02:23:48,123] Register - Step 03: Input to 'Email' textbox with value: klinhtkt@gmail.com
-<br></span>
-                <span class="reporter-method-output">[INFO ] [2022-05-20 02:23:48,232] Register - Step 04: Click to 'Submit' button
-<br></span>
-                <span class="reporter-method-output">[INFO ] [2022-05-20 02:23:50,363] Register - Step 05: Get 'Username' / 'Password' information
+                <span class="reporter-method-output">[INFO ] [2022-05-21 16:51:18,372] Register - Step 05: Get 'Username' / 'Password' information
 <br></span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
             <div class="reporter-method-div">
               <span class="reporter-method-name">TC_02_Login_To_System</span>
               <div class="reporter-method-output-div">
-                <span class="reporter-method-output">[INFO ] [2022-05-20 02:23:50,431] Login - Step 01: Open Login page
+                <span class="reporter-method-output">[INFO ] [2022-05-21 16:51:18,485] Login - Step 01: Open Login page
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-05-20 02:23:51,537] Login - Step 03: Input to 'Username' textbox with value: mngr399874
+                <span class="reporter-method-output">[INFO ] [2022-05-21 16:51:20,560] Login - Step 03: Input to 'Username' textbox with value: mngr399874
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-05-20 02:23:51,603] Login - Step 04: Input to 'Password' textbox with value: uteguga
+                <span class="reporter-method-output">[INFO ] [2022-05-21 16:51:20,743] Login - Step 04: Input to 'Password' textbox with value: uteguga
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-05-20 02:23:51,648] Login - Step 05: Click to 'Login' button
+                <span class="reporter-method-output">[INFO ] [2022-05-21 16:51:20,861] Login - Step 05: Click to 'Login' button
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-05-20 02:23:52,836] Login - Step 06: Verify welcom message display in 'Homepage'
+                <span class="reporter-method-output">[INFO ] [2022-05-21 16:51:25,416] Login - Step 06: Verify welcom message display in 'Homepage'
 <br></span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
@@ -378,35 +301,17 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">TC_01_Register_To_System</span>
-                <span class="method-start">7175 ms</span>
+                <span class="method-start">19260 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">TC_02_Login_To_System</span>
-                <span class="method-start">11260 ms</span>
+                <span class="method-start">40486 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">13495 ms</span>
-              </div> <!-- configuration-class after -->
-              <div class="configuration-class before">
-                <span class="method-name">beforeClass(firefox)</span>
-                <span class="method-start">13911 ms</span>
-              </div> <!-- configuration-class before -->
-              <div class="test-method">
-                <span class="method-name">TC_01_Register_To_System</span>
-                <span class="method-start">37884 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">TC_02_Login_To_System</span>
-                <span class="method-start">42012 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-class after">
-                <span class="method-name">afterClass</span>
-                <span class="method-start">44457 ms</span>
+                <span class="method-start">47477 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
