--- a/test-output/old/Bank Guru/methods-alphabetical.html
+++ b/test-output/old/Bank Guru/methods-alphabetical.html
@@ -1,20 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Bank Guru</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="daa2b3">  <td>22/05/20 02:23:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_15_Log_Report_HTML.TC_01_Register_To_System()[pri:0, instance:com.bankguru.user.Level_15_Log_Report_HTML@3cce5371]">TC_01_Register_To_System</td> 
-  <td>main@1593458942</td>   <td></td> </tr>
-<tr bgcolor="daa2b3">  <td>22/05/20 02:23:46</td>   <td>30709</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_15_Log_Report_HTML.TC_01_Register_To_System()[pri:0, instance:com.bankguru.user.Level_15_Log_Report_HTML@1a4927d6]">TC_01_Register_To_System</td> 
-  <td>main@1593458942</td>   <td></td> </tr>
-<tr bgcolor="daa2b3">  <td>22/05/20 02:23:19</td>   <td>4085</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_15_Log_Report_HTML.TC_02_Login_To_System()[pri:0, instance:com.bankguru.user.Level_15_Log_Report_HTML@3cce5371]">TC_02_Login_To_System</td> 
-  <td>main@1593458942</td>   <td></td> </tr>
-<tr bgcolor="daa2b3">  <td>22/05/20 02:23:50</td>   <td>34837</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_15_Log_Report_HTML.TC_02_Login_To_System()[pri:0, instance:com.bankguru.user.Level_15_Log_Report_HTML@1a4927d6]">TC_02_Login_To_System</td> 
-  <td>main@1593458942</td>   <td></td> </tr>
-<tr bgcolor="daa2b3">  <td>22/05/20 02:23:21</td>   <td>6320</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_15_Log_Report_HTML.afterClass()[pri:0, instance:com.bankguru.user.Level_15_Log_Report_HTML@3cce5371]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1593458942</td>   <td></td> </tr>
-<tr bgcolor="daa2b3">  <td>22/05/20 02:23:52</td>   <td>37282</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_15_Log_Report_HTML.afterClass()[pri:0, instance:com.bankguru.user.Level_15_Log_Report_HTML@1a4927d6]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1593458942</td>   <td></td> </tr>
-<tr bgcolor="daa2b3">  <td>22/05/20 02:23:08</td>   <td>-7168</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_15_Log_Report_HTML.beforeClass(java.lang.String)[pri:0, instance:com.bankguru.user.Level_15_Log_Report_HTML@3cce5371]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1593458942</td>   <td></td> </tr>
-<tr bgcolor="daa2b3">  <td>22/05/20 02:23:22</td>   <td>6736</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_15_Log_Report_HTML.beforeClass(java.lang.String)[pri:0, instance:com.bankguru.user.Level_15_Log_Report_HTML@1a4927d6]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1593458942</td>   <td></td> </tr>
+<tr bgcolor="6c9f99">  <td>22/05/21 16:50:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_15_Log_Report_HTML.TC_01_Register_To_System()[pri:0, instance:com.bankguru.user.Level_15_Log_Report_HTML@f1da57d]">TC_01_Register_To_System</td> 
+  <td>main@1237912220</td>   <td></td> </tr>
+<tr bgcolor="6c9f99">  <td>22/05/21 16:51:18</td>   <td>21226</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_15_Log_Report_HTML.TC_02_Login_To_System()[pri:0, instance:com.bankguru.user.Level_15_Log_Report_HTML@f1da57d]">TC_02_Login_To_System</td> 
+  <td>main@1237912220</td>   <td></td> </tr>
+<tr bgcolor="6c9f99">  <td>22/05/21 16:51:25</td>   <td>28217</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_15_Log_Report_HTML.afterClass()[pri:0, instance:com.bankguru.user.Level_15_Log_Report_HTML@f1da57d]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1237912220</td>   <td></td> </tr>
+<tr bgcolor="6c9f99">  <td>22/05/21 16:50:38</td>   <td>-19253</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_15_Log_Report_HTML.beforeClass(java.lang.String)[pri:0, instance:com.bankguru.user.Level_15_Log_Report_HTML@f1da57d]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1237912220</td>   <td></td> </tr>
 </table>
