Topic 25 Share Class State Inprogress

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,25 +9,17 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Bank Guru</th></tr>
-<tr><td><a href="#t0">Run on Chrome</a></td><td class="num">1</td><td class="num">0</td><td class="num attn">1</td><td class="num">47,737</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Run on Chrome</a></td><td class="num">8</td><td class="num">0</td><td class="num">0</td><td class="num">129,589</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Bank Guru</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Run on Chrome &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.bankguru.user.Level_15_Log_Report_HTML</td><td><a href="#m0">TC_02_Login_To_System</a></td><td rowspan="1">1653126678483</td><td rowspan="1">6988</td></tr><tr><th colspan="4">Run on Chrome &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.bankguru.user.Level_15_Log_Report_HTML</td><td><a href="#m1">TC_01_Register_To_System</a></td><td rowspan="1">1653126657257</td><td rowspan="1">21224</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Bank Guru</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Run on Chrome &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">com.bankguru.user.Level_16_Share_Class_State_01</td><td><a href="#m0">TC_01_Create_New_Account</a></td><td rowspan="1">1653420153886</td><td rowspan="1">6</td></tr><tr class="passedeven"><td><a href="#m1">TC_02_View_Account</a></td><td rowspan="1">1653420153895</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m2">TC_03_Edit_Account</a></td><td rowspan="1">1653420153897</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m3">TC_04_Delete_Account</a></td><td rowspan="1">1653420153900</td><td rowspan="1">1</td></tr><tr class="passedodd"><td rowspan="4">com.bankguru.user.Level_16_Share_Class_State_02</td><td><a href="#m4">TC_01_Create_New_Customer</a></td><td rowspan="1">1653420190292</td><td rowspan="1">2</td></tr><tr class="passedodd"><td><a href="#m5">TC_02_View_Customer</a></td><td rowspan="1">1653420190296</td><td rowspan="1">1</td></tr><tr class="passedodd"><td><a href="#m6">TC_03_Edit_Customer</a></td><td rowspan="1">1653420190299</td><td rowspan="1">1</td></tr><tr class="passedodd"><td><a href="#m7">TC_04_Delete_Customer</a></td><td rowspan="1">1653420190301</td><td rowspan="1">2</td></tr></tbody>
 </table>
-<h2>Run on Chrome</h2><h3 id="m0">com.bankguru.user.Level_15_Log_Report_HTML#TC_02_Login_To_System</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">[INFO ] [2022-05-21 16:51:18,485] Login - Step 01: Open Login page
-<br><br/>[INFO ] [2022-05-21 16:51:20,560] Login - Step 03: Input to 'Username' textbox with value: mngr399874
-<br><br/>[INFO ] [2022-05-21 16:51:20,743] Login - Step 04: Input to 'Password' textbox with value: uteguga
-<br><br/>[INFO ] [2022-05-21 16:51:20,861] Login - Step 05: Click to 'Login' button
-<br><br/>[INFO ] [2022-05-21 16:51:25,416] Login - Step 06: Verify welcom message display in 'Homepage'
-<br></div></td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [Welcome To Manager&apos;s Page of Guru99 Bankdfasd ., ] but found [Welcome To Manager&apos;s Page of Guru99 Bank]
-	at commons.AbstractTest.checkEquals(AbstractTest.java:174)
-	at commons.AbstractTest.verifyEquals(AbstractTest.java:185)
-	at com.bankguru.user.Level_15_Log_Report_HTML.TC_02_Login_To_System(Level_15_Log_Report_HTML.java:65)
-... Removed 30 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.bankguru.user.Level_15_Log_Report_HTML#TC_01_Register_To_System</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">[INFO ] [2022-05-21 16:50:57,260] Register - Step 01: Get login page url
-<br><br/>[INFO ] [2022-05-21 16:50:57,266] Register - Step 02: Click to 'here' link
-<br><br/>[INFO ] [2022-05-21 16:51:11,270] Register - Step 03: Input to 'Email' textbox with value: klinhtkt@gmail.com
-<br><br/>[INFO ] [2022-05-21 16:51:11,459] Register - Step 04: Click to 'Submit' button
-<br><br/>[INFO ] [2022-05-21 16:51:18,372] Register - Step 05: Get 'Username' / 'Password' information
-<br></div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Run on Chrome</h2><h3 id="m0">com.bankguru.user.Level_16_Share_Class_State_01#TC_01_Create_New_Account</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.bankguru.user.Level_16_Share_Class_State_01#TC_02_View_Account</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.bankguru.user.Level_16_Share_Class_State_01#TC_03_Edit_Account</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.bankguru.user.Level_16_Share_Class_State_01#TC_04_Delete_Account</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.bankguru.user.Level_16_Share_Class_State_02#TC_01_Create_New_Customer</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">com.bankguru.user.Level_16_Share_Class_State_02#TC_02_View_Customer</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">com.bankguru.user.Level_16_Share_Class_State_02#TC_03_Edit_Customer</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">com.bankguru.user.Level_16_Share_Class_State_02#TC_04_Delete_Customer</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
