--- a/test-output/html/output.html
+++ b/test-output/html/output.html
@@ -15,29 +15,25 @@
   </p>
 
   <div id="log">
-                  [INFO ] [2022-05-21 16:50:38,010] Pre-condition: Open chrome and Navigate to app url<br/>
+                  [INFO ] [2022-05-25 02:22:00,395] Pre-condition: Open chrome and Navigate to app url<br/>
 &lt;br&gt;<br />
-                        [INFO ] [2022-05-21 16:50:57,260] Register - Step 01: Get login page url<br/>
+                        [INFO ] [2022-05-25 02:22:25,600] Pre-Condition 01 - Step 01: Input to UserID textbox<br/>
 &lt;br&gt;<br />
-                        [INFO ] [2022-05-21 16:50:57,266] Register - Step 02: Click to &apos;here&apos; link<br/>
+                        [INFO ] [2022-05-25 02:22:25,779] Pre-Condition 01 - Step 02: Input to Password textbox<br/>
 &lt;br&gt;<br />
-                        [INFO ] [2022-05-21 16:51:11,270] Register - Step 03: Input to &apos;Email&apos; textbox with value: klinhtkt@gmail.com<br/>
+                        [INFO ] [2022-05-25 02:22:25,909] Pre-Condition 01 - Step 03: Input to Login button<br/>
 &lt;br&gt;<br />
-                        [INFO ] [2022-05-21 16:51:11,459] Register - Step 04: Click to &apos;Submit&apos; button<br/>
+                        [INFO ] [2022-05-25 02:22:33,902] Postcondition - Close browser<br/>
 &lt;br&gt;<br />
-                        [INFO ] [2022-05-21 16:51:18,372] Register - Step 05: Get &apos;Username&apos; / &apos;Password&apos; information<br/>
+                        [INFO ] [2022-05-25 02:22:34,112] Pre-condition: Open chrome and Navigate to app url<br/>
 &lt;br&gt;<br />
-                        [INFO ] [2022-05-21 16:51:18,485] Login - Step 01: Open Login page<br/>
+                        [INFO ] [2022-05-25 02:23:00,546] Pre-Condition 01 - Step 01: Input to UserID textbox<br/>
 &lt;br&gt;<br />
-                        [INFO ] [2022-05-21 16:51:20,560] Login - Step 03: Input to &apos;Username&apos; textbox with value: mngr399874<br/>
+                        [INFO ] [2022-05-25 02:23:00,781] Pre-Condition 01 - Step 02: Input to Password textbox<br/>
 &lt;br&gt;<br />
-                        [INFO ] [2022-05-21 16:51:20,743] Login - Step 04: Input to &apos;Password&apos; textbox with value: uteguga<br/>
+                        [INFO ] [2022-05-25 02:23:00,900] Pre-Condition 01 - Step 03: Input to Login button<br/>
 &lt;br&gt;<br />
-                        [INFO ] [2022-05-21 16:51:20,861] Login - Step 05: Click to &apos;Login&apos; button<br/>
-&lt;br&gt;<br />
-                        [INFO ] [2022-05-21 16:51:25,416] Login - Step 06: Verify welcom message display in &apos;Homepage&apos;<br/>
-&lt;br&gt;<br />
-                        [INFO ] [2022-05-21 16:51:25,474] Postcondition - Close browser<br/>
+                        [INFO ] [2022-05-25 02:23:10,305] Postcondition - Close browser<br/>
 &lt;br&gt;<br />
             </div>
 
