--- a/test-output/old/Bank Guru/methods-alphabetical.html
+++ b/test-output/old/Bank Guru/methods-alphabetical.html
@@ -1,12 +1,30 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Bank Guru</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6c9f99">  <td>22/05/21 16:50:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_15_Log_Report_HTML.TC_01_Register_To_System()[pri:0, instance:com.bankguru.user.Level_15_Log_Report_HTML@f1da57d]">TC_01_Register_To_System</td> 
-  <td>main@1237912220</td>   <td></td> </tr>
-<tr bgcolor="6c9f99">  <td>22/05/21 16:51:18</td>   <td>21226</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_15_Log_Report_HTML.TC_02_Login_To_System()[pri:0, instance:com.bankguru.user.Level_15_Log_Report_HTML@f1da57d]">TC_02_Login_To_System</td> 
-  <td>main@1237912220</td>   <td></td> </tr>
-<tr bgcolor="6c9f99">  <td>22/05/21 16:51:25</td>   <td>28217</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_15_Log_Report_HTML.afterClass()[pri:0, instance:com.bankguru.user.Level_15_Log_Report_HTML@f1da57d]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1237912220</td>   <td></td> </tr>
-<tr bgcolor="6c9f99">  <td>22/05/21 16:50:38</td>   <td>-19253</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_15_Log_Report_HTML.beforeClass(java.lang.String)[pri:0, instance:com.bankguru.user.Level_15_Log_Report_HTML@f1da57d]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1237912220</td>   <td></td> </tr>
+<tr bgcolor="87bbef">  <td>22/05/25 02:22:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_16_Share_Class_State_01.TC_01_Create_New_Account()[pri:0, instance:com.bankguru.user.Level_16_Share_Class_State_01@2dfaea86]">TC_01_Create_New_Account</td> 
+  <td>main@1518331471</td>   <td></td> </tr>
+<tr bgcolor="696781">  <td>22/05/25 02:23:10</td>   <td>36406</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_16_Share_Class_State_02.TC_01_Create_New_Customer()[pri:0, instance:com.bankguru.user.Level_16_Share_Class_State_02@15888343]">TC_01_Create_New_Customer</td> 
+  <td>main@1518331471</td>   <td></td> </tr>
+<tr bgcolor="87bbef">  <td>22/05/25 02:22:33</td>   <td>9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_16_Share_Class_State_01.TC_02_View_Account()[pri:0, instance:com.bankguru.user.Level_16_Share_Class_State_01@2dfaea86]">TC_02_View_Account</td> 
+  <td>main@1518331471</td>   <td></td> </tr>
+<tr bgcolor="696781">  <td>22/05/25 02:23:10</td>   <td>36410</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_16_Share_Class_State_02.TC_02_View_Customer()[pri:0, instance:com.bankguru.user.Level_16_Share_Class_State_02@15888343]">TC_02_View_Customer</td> 
+  <td>main@1518331471</td>   <td></td> </tr>
+<tr bgcolor="87bbef">  <td>22/05/25 02:22:33</td>   <td>11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_16_Share_Class_State_01.TC_03_Edit_Account()[pri:0, instance:com.bankguru.user.Level_16_Share_Class_State_01@2dfaea86]">TC_03_Edit_Account</td> 
+  <td>main@1518331471</td>   <td></td> </tr>
+<tr bgcolor="696781">  <td>22/05/25 02:23:10</td>   <td>36413</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_16_Share_Class_State_02.TC_03_Edit_Customer()[pri:0, instance:com.bankguru.user.Level_16_Share_Class_State_02@15888343]">TC_03_Edit_Customer</td> 
+  <td>main@1518331471</td>   <td></td> </tr>
+<tr bgcolor="87bbef">  <td>22/05/25 02:22:33</td>   <td>14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_16_Share_Class_State_01.TC_04_Delete_Account()[pri:0, instance:com.bankguru.user.Level_16_Share_Class_State_01@2dfaea86]">TC_04_Delete_Account</td> 
+  <td>main@1518331471</td>   <td></td> </tr>
+<tr bgcolor="696781">  <td>22/05/25 02:23:10</td>   <td>36415</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_16_Share_Class_State_02.TC_04_Delete_Customer()[pri:0, instance:com.bankguru.user.Level_16_Share_Class_State_02@15888343]">TC_04_Delete_Customer</td> 
+  <td>main@1518331471</td>   <td></td> </tr>
+<tr bgcolor="87bbef">  <td>22/05/25 02:22:33</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_16_Share_Class_State_01.afterClass()[pri:0, instance:com.bankguru.user.Level_16_Share_Class_State_01@2dfaea86]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1518331471</td>   <td></td> </tr>
+<tr bgcolor="696781">  <td>22/05/25 02:23:10</td>   <td>36419</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_16_Share_Class_State_02.afterClass()[pri:0, instance:com.bankguru.user.Level_16_Share_Class_State_02@15888343]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1518331471</td>   <td></td> </tr>
+<tr bgcolor="6c9f99">  <td>22/05/25 02:21:01</td>   <td>-92371</td> <td>&nbsp;</td><td title="&gt;&gt;Common_01_Register.beforeClass(java.lang.String)[pri:0, instance:com.bankguru.common.Common_01_Register@d554c5f]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1518331471</td>   <td></td> </tr>
+<tr bgcolor="87bbef">  <td>22/05/25 02:22:00</td>   <td>-33492</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_16_Share_Class_State_01.beforeClass(java.lang.String)[pri:0, instance:com.bankguru.user.Level_16_Share_Class_State_01@2dfaea86]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1518331471</td>   <td></td> </tr>
+<tr bgcolor="696781">  <td>22/05/25 02:22:34</td>   <td>226</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_16_Share_Class_State_02.beforeClass(java.lang.String)[pri:0, instance:com.bankguru.user.Level_16_Share_Class_State_02@15888343]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1518331471</td>   <td></td> </tr>
 </table>
