--- a/test-output/old/Bank Guru/reporter-output.html
+++ b/test-output/old/Bank Guru/reporter-output.html
@@ -1,25 +1,21 @@
-<h2>Reporter output</h2><table><tr><td>[INFO ] [2022-05-21 16:50:38,010] Pre-condition: Open chrome and Navigate to app url
+<h2>Reporter output</h2><table><tr><td>[INFO ] [2022-05-25 02:22:00,395] Pre-condition: Open chrome and Navigate to app url
 <br></td></tr>
-<tr><td>[INFO ] [2022-05-21 16:50:57,260] Register - Step 01: Get login page url
+<tr><td>[INFO ] [2022-05-25 02:22:25,600] Pre-Condition 01 - Step 01: Input to UserID textbox
 <br></td></tr>
-<tr><td>[INFO ] [2022-05-21 16:50:57,266] Register - Step 02: Click to 'here' link
+<tr><td>[INFO ] [2022-05-25 02:22:25,779] Pre-Condition 01 - Step 02: Input to Password textbox
 <br></td></tr>
-<tr><td>[INFO ] [2022-05-21 16:51:11,270] Register - Step 03: Input to 'Email' textbox with value: klinhtkt@gmail.com
+<tr><td>[INFO ] [2022-05-25 02:22:25,909] Pre-Condition 01 - Step 03: Input to Login button
 <br></td></tr>
-<tr><td>[INFO ] [2022-05-21 16:51:11,459] Register - Step 04: Click to 'Submit' button
+<tr><td>[INFO ] [2022-05-25 02:22:33,902] Postcondition - Close browser
 <br></td></tr>
-<tr><td>[INFO ] [2022-05-21 16:51:18,372] Register - Step 05: Get 'Username' / 'Password' information
+<tr><td>[INFO ] [2022-05-25 02:22:34,112] Pre-condition: Open chrome and Navigate to app url
 <br></td></tr>
-<tr><td>[INFO ] [2022-05-21 16:51:18,485] Login - Step 01: Open Login page
+<tr><td>[INFO ] [2022-05-25 02:23:00,546] Pre-Condition 01 - Step 01: Input to UserID textbox
 <br></td></tr>
-<tr><td>[INFO ] [2022-05-21 16:51:20,560] Login - Step 03: Input to 'Username' textbox with value: mngr399874
+<tr><td>[INFO ] [2022-05-25 02:23:00,781] Pre-Condition 01 - Step 02: Input to Password textbox
 <br></td></tr>
-<tr><td>[INFO ] [2022-05-21 16:51:20,743] Login - Step 04: Input to 'Password' textbox with value: uteguga
+<tr><td>[INFO ] [2022-05-25 02:23:00,900] Pre-Condition 01 - Step 03: Input to Login button
 <br></td></tr>
-<tr><td>[INFO ] [2022-05-21 16:51:20,861] Login - Step 05: Click to 'Login' button
-<br></td></tr>
-<tr><td>[INFO ] [2022-05-21 16:51:25,416] Login - Step 06: Verify welcom message display in 'Homepage'
-<br></td></tr>
-<tr><td>[INFO ] [2022-05-21 16:51:25,474] Postcondition - Close browser
+<tr><td>[INFO ] [2022-05-25 02:23:10,305] Postcondition - Close browser
 <br></td></tr>
 </table>
