--- a/test-output/old/Bank Guru/methods.html
+++ b/test-output/old/Bank Guru/methods.html
@@ -1,30 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Bank Guru</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6c9f99">  <td>22/05/25 02:21:01</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Common_01_Register.beforeClass(java.lang.String)[pri:0, instance:com.bankguru.common.Common_01_Register@d554c5f]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1518331471</td>   <td></td> </tr>
-<tr bgcolor="87bbef">  <td>22/05/25 02:22:00</td>   <td>58879</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_16_Share_Class_State_01.beforeClass(java.lang.String)[pri:0, instance:com.bankguru.user.Level_16_Share_Class_State_01@2dfaea86]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1518331471</td>   <td></td> </tr>
-<tr bgcolor="87bbef">  <td>22/05/25 02:22:33</td>   <td>92371</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_16_Share_Class_State_01.TC_01_Create_New_Account()[pri:0, instance:com.bankguru.user.Level_16_Share_Class_State_01@2dfaea86]">TC_01_Create_New_Account</td> 
-  <td>main@1518331471</td>   <td></td> </tr>
-<tr bgcolor="87bbef">  <td>22/05/25 02:22:33</td>   <td>92380</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_16_Share_Class_State_01.TC_02_View_Account()[pri:0, instance:com.bankguru.user.Level_16_Share_Class_State_01@2dfaea86]">TC_02_View_Account</td> 
-  <td>main@1518331471</td>   <td></td> </tr>
-<tr bgcolor="87bbef">  <td>22/05/25 02:22:33</td>   <td>92382</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_16_Share_Class_State_01.TC_03_Edit_Account()[pri:0, instance:com.bankguru.user.Level_16_Share_Class_State_01@2dfaea86]">TC_03_Edit_Account</td> 
-  <td>main@1518331471</td>   <td></td> </tr>
-<tr bgcolor="87bbef">  <td>22/05/25 02:22:33</td>   <td>92385</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_16_Share_Class_State_01.TC_04_Delete_Account()[pri:0, instance:com.bankguru.user.Level_16_Share_Class_State_01@2dfaea86]">TC_04_Delete_Account</td> 
-  <td>main@1518331471</td>   <td></td> </tr>
-<tr bgcolor="87bbef">  <td>22/05/25 02:22:33</td>   <td>92387</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_16_Share_Class_State_01.afterClass()[pri:0, instance:com.bankguru.user.Level_16_Share_Class_State_01@2dfaea86]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1518331471</td>   <td></td> </tr>
-<tr bgcolor="696781">  <td>22/05/25 02:22:34</td>   <td>92597</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_16_Share_Class_State_02.beforeClass(java.lang.String)[pri:0, instance:com.bankguru.user.Level_16_Share_Class_State_02@15888343]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1518331471</td>   <td></td> </tr>
-<tr bgcolor="696781">  <td>22/05/25 02:23:10</td>   <td>128777</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_16_Share_Class_State_02.TC_01_Create_New_Customer()[pri:0, instance:com.bankguru.user.Level_16_Share_Class_State_02@15888343]">TC_01_Create_New_Customer</td> 
-  <td>main@1518331471</td>   <td></td> </tr>
-<tr bgcolor="696781">  <td>22/05/25 02:23:10</td>   <td>128781</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_16_Share_Class_State_02.TC_02_View_Customer()[pri:0, instance:com.bankguru.user.Level_16_Share_Class_State_02@15888343]">TC_02_View_Customer</td> 
-  <td>main@1518331471</td>   <td></td> </tr>
-<tr bgcolor="696781">  <td>22/05/25 02:23:10</td>   <td>128784</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_16_Share_Class_State_02.TC_03_Edit_Customer()[pri:0, instance:com.bankguru.user.Level_16_Share_Class_State_02@15888343]">TC_03_Edit_Customer</td> 
-  <td>main@1518331471</td>   <td></td> </tr>
-<tr bgcolor="696781">  <td>22/05/25 02:23:10</td>   <td>128786</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_16_Share_Class_State_02.TC_04_Delete_Customer()[pri:0, instance:com.bankguru.user.Level_16_Share_Class_State_02@15888343]">TC_04_Delete_Customer</td> 
-  <td>main@1518331471</td>   <td></td> </tr>
-<tr bgcolor="696781">  <td>22/05/25 02:23:10</td>   <td>128790</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_16_Share_Class_State_02.afterClass()[pri:0, instance:com.bankguru.user.Level_16_Share_Class_State_02@15888343]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1518331471</td>   <td></td> </tr>
+<tr bgcolor="6c9f99">  <td>22/05/30 00:39:07</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Topic_01_Handle_Facebook_Cookie.beforeClass()[pri:0, instance:com.java.facebook.Topic_01_Handle_Facebook_Cookie@5d7148e2]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="87bbef">  <td>22/05/30 00:39:15</td>   <td>8240</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Topic_02_Login_Success.beforeClass()[pri:0, instance:com.java.facebook.Topic_02_Login_Success@25fb8912]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="87bbef">  <td>22/05/30 00:39:18</td>   <td>10600</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Topic_02_Login_Success.Load_Cookies()[pri:0, instance:com.java.facebook.Topic_02_Login_Success@25fb8912]">Load_Cookies</td> 
+  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="87bbef">  <td>22/05/30 00:39:23</td>   <td>15676</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Topic_02_Login_Success.afterClass()[pri:0, instance:com.java.facebook.Topic_02_Login_Success@25fb8912]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="6c9f99">  <td>22/05/30 00:39:23</td>   <td>16070</td> <td>&nbsp;</td><td title="&lt;&lt;Topic_01_Handle_Facebook_Cookie.afterTest()[pri:0, instance:com.java.facebook.Topic_01_Handle_Facebook_Cookie@5d7148e2]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1325056130</td>   <td></td> </tr>
 </table>
