--- a/test-output/index.html
+++ b/test-output/index.html
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">8 methods,   8 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,42 +102,7 @@
                     <div class="method-list-content passed suite-Bank_Guru">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Bank_Guru" title="com.bankguru.user.Level_16_Share_Class_State_01" class="method navigator-link" hash-for-method="TC_01_Create_New_Account">TC_01_Create_New_Account</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Bank_Guru" title="com.bankguru.user.Level_16_Share_Class_State_02" class="method navigator-link" hash-for-method="TC_01_Create_New_Customer">TC_01_Create_New_Customer</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Bank_Guru" title="com.bankguru.user.Level_16_Share_Class_State_01" class="method navigator-link" hash-for-method="TC_02_View_Account">TC_02_View_Account</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Bank_Guru" title="com.bankguru.user.Level_16_Share_Class_State_02" class="method navigator-link" hash-for-method="TC_02_View_Customer">TC_02_View_Customer</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Bank_Guru" title="com.bankguru.user.Level_16_Share_Class_State_01" class="method navigator-link" hash-for-method="TC_03_Edit_Account">TC_03_Edit_Account</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Bank_Guru" title="com.bankguru.user.Level_16_Share_Class_State_02" class="method navigator-link" hash-for-method="TC_03_Edit_Customer">TC_03_Edit_Customer</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Bank_Guru" title="com.bankguru.user.Level_16_Share_Class_State_01" class="method navigator-link" hash-for-method="TC_04_Delete_Account">TC_04_Delete_Account</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Bank_Guru" title="com.bankguru.user.Level_16_Share_Class_State_02" class="method navigator-link" hash-for-method="TC_04_Delete_Customer">TC_04_Delete_Customer</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Bank_Guru" title="com.java.facebook.Topic_02_Login_Success" class="method navigator-link" hash-for-method="Load_Cookies">Load_Cookies</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Bank_Guru -->
@@ -155,71 +120,14 @@
           <div class="suite-Bank_Guru-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.bankguru.user.Level_16_Share_Class_State_02</span>
+              <span class="class-name">com.java.facebook.Topic_02_Login_Success</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="TC_01_Create_New_Customer">
-                  </a> <!-- TC_01_Create_New_Customer -->
-                  <span class="method-name">TC_01_Create_New_Customer</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="TC_02_View_Customer">
-                  </a> <!-- TC_02_View_Customer -->
-                  <span class="method-name">TC_02_View_Customer</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="TC_03_Edit_Customer">
-                  </a> <!-- TC_03_Edit_Customer -->
-                  <span class="method-name">TC_03_Edit_Customer</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="TC_04_Delete_Customer">
-                  </a> <!-- TC_04_Delete_Customer -->
-                  <span class="method-name">TC_04_Delete_Customer</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Bank_Guru-class-passed -->
-          <div class="suite-Bank_Guru-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">com.bankguru.user.Level_16_Share_Class_State_01</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="TC_01_Create_New_Account">
-                  </a> <!-- TC_01_Create_New_Account -->
-                  <span class="method-name">TC_01_Create_New_Account</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="TC_02_View_Account">
-                  </a> <!-- TC_02_View_Account -->
-                  <span class="method-name">TC_02_View_Account</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="TC_03_Edit_Account">
-                  </a> <!-- TC_03_Edit_Account -->
-                  <span class="method-name">TC_03_Edit_Account</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="TC_04_Delete_Account">
-                  </a> <!-- TC_04_Delete_Account -->
-                  <span class="method-name">TC_04_Delete_Account</span>
+                  <a name="Load_Cookies">
+                  </a> <!-- Load_Cookies -->
+                  <span class="method-name">Load_Cookies</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -242,9 +150,8 @@
   &lt;test thread-count=&quot;5&quot; name=&quot;Run on Chrome&quot;&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.bankguru.common.Common_01_Register&quot;/&gt;
-      &lt;class name=&quot;com.bankguru.user.Level_16_Share_Class_State_01&quot;/&gt;
-      &lt;class name=&quot;com.bankguru.user.Level_16_Share_Class_State_02&quot;/&gt;
+      &lt;class name=&quot;com.java.facebook.Topic_01_Handle_Facebook_Cookie&quot;/&gt;
+      &lt;class name=&quot;com.java.facebook.Topic_02_Login_Success&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Run on Chrome --&gt;
 &lt;/suite&gt; &lt;!-- Bank Guru --&gt;
@@ -258,7 +165,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Run on Chrome (3 classes)</span>
+                <span class="test-name">Run on Chrome (2 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -284,44 +191,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(8);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'TC_01_Create_New_Account')
-data.setCell(0, 2, 'com.bankguru.user.Level_16_Share_Class_State_01')
-data.setCell(0, 3, 6);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'TC_01_Create_New_Customer')
-data.setCell(1, 2, 'com.bankguru.user.Level_16_Share_Class_State_02')
-data.setCell(1, 3, 2);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'TC_04_Delete_Customer')
-data.setCell(2, 2, 'com.bankguru.user.Level_16_Share_Class_State_02')
-data.setCell(2, 3, 2);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'TC_03_Edit_Account')
-data.setCell(3, 2, 'com.bankguru.user.Level_16_Share_Class_State_01')
-data.setCell(3, 3, 2);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'TC_02_View_Customer')
-data.setCell(4, 2, 'com.bankguru.user.Level_16_Share_Class_State_02')
-data.setCell(4, 3, 1);
-data.setCell(5, 0, 5)
-data.setCell(5, 1, 'TC_02_View_Account')
-data.setCell(5, 2, 'com.bankguru.user.Level_16_Share_Class_State_01')
-data.setCell(5, 3, 1);
-data.setCell(6, 0, 6)
-data.setCell(6, 1, 'TC_03_Edit_Customer')
-data.setCell(6, 2, 'com.bankguru.user.Level_16_Share_Class_State_02')
-data.setCell(6, 3, 1);
-data.setCell(7, 0, 7)
-data.setCell(7, 1, 'TC_04_Delete_Account')
-data.setCell(7, 2, 'com.bankguru.user.Level_16_Share_Class_State_01')
-data.setCell(7, 3, 1);
+data.setCell(0, 1, 'Load_Cookies')
+data.setCell(0, 2, 'com.java.facebook.Topic_02_Login_Success')
+data.setCell(0, 3, 5074);
 window.suiteTableData['Bank_Guru']= { tableData: data, tableDiv: 'times-div-Bank_Guru'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 16 ms</span>
+              <span class="suite-total-time">Total running time: 5 seconds</span>
               <div id="times-div-Bank_Guru">
               </div> <!-- times-div-Bank_Guru -->
             </div> <!-- times-div -->
@@ -347,65 +226,33 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.bankguru.common.Common_01_Register</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.java.facebook.Topic_01_Handle_Facebook_Cookie</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
-                <span class="method-name">beforeClass(chrome)</span>
+                <span class="method-name">beforeClass</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
-              <div class="chronological-class-name">com.bankguru.user.Level_16_Share_Class_State_01</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.java.facebook.Topic_02_Login_Success</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">beforeClass(chrome)</span>
-                <span class="method-start">58888 ms</span>
+                <span class="method-name">beforeClass</span>
+                <span class="method-start">8244 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">TC_01_Create_New_Account</span>
-                <span class="method-start">92380 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">TC_02_View_Account</span>
-                <span class="method-start">92389 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">TC_03_Edit_Account</span>
-                <span class="method-start">92391 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">TC_04_Delete_Account</span>
-                <span class="method-start">92394 ms</span>
+                <span class="method-name">Load_Cookies</span>
+                <span class="method-start">10604 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">92396 ms</span>
+                <span class="method-start">15680 ms</span>
               </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
-              <div class="chronological-class-name">com.bankguru.user.Level_16_Share_Class_State_02</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
-                <span class="method-name">beforeClass(chrome)</span>
-                <span class="method-start">92605 ms</span>
-              </div> <!-- configuration-class before -->
-              <div class="test-method">
-                <span class="method-name">TC_01_Create_New_Customer</span>
-                <span class="method-start">128786 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">TC_02_View_Customer</span>
-                <span class="method-start">128790 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">TC_03_Edit_Customer</span>
-                <span class="method-start">128793 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">TC_04_Delete_Customer</span>
-                <span class="method-start">128795 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-class after">
-                <span class="method-name">afterClass</span>
-                <span class="method-start">128798 ms</span>
-              </div> <!-- configuration-class after -->
+              <div class="chronological-class-name">com.java.facebook.Topic_01_Handle_Facebook_Cookie</div> <!-- chronological-class-name -->
+              <div class="configuration-test after">
+                <span class="method-name">afterTest</span>
+                <span class="method-start">16074 ms</span>
+              </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
