--- a/test-output/old/Bank Guru/reporter-output.html
+++ b/test-output/old/Bank Guru/reporter-output.html
@@ -1,21 +1,1 @@
-<h2>Reporter output</h2><table><tr><td>[INFO ] [2022-05-25 02:22:00,395] Pre-condition: Open chrome and Navigate to app url
-<br></td></tr>
-<tr><td>[INFO ] [2022-05-25 02:22:25,600] Pre-Condition 01 - Step 01: Input to UserID textbox
-<br></td></tr>
-<tr><td>[INFO ] [2022-05-25 02:22:25,779] Pre-Condition 01 - Step 02: Input to Password textbox
-<br></td></tr>
-<tr><td>[INFO ] [2022-05-25 02:22:25,909] Pre-Condition 01 - Step 03: Input to Login button
-<br></td></tr>
-<tr><td>[INFO ] [2022-05-25 02:22:33,902] Postcondition - Close browser
-<br></td></tr>
-<tr><td>[INFO ] [2022-05-25 02:22:34,112] Pre-condition: Open chrome and Navigate to app url
-<br></td></tr>
-<tr><td>[INFO ] [2022-05-25 02:23:00,546] Pre-Condition 01 - Step 01: Input to UserID textbox
-<br></td></tr>
-<tr><td>[INFO ] [2022-05-25 02:23:00,781] Pre-Condition 01 - Step 02: Input to Password textbox
-<br></td></tr>
-<tr><td>[INFO ] [2022-05-25 02:23:00,900] Pre-Condition 01 - Step 03: Input to Login button
-<br></td></tr>
-<tr><td>[INFO ] [2022-05-25 02:23:10,305] Postcondition - Close browser
-<br></td></tr>
-</table>
+<h2>Reporter output</h2><table></table>
